    /*
     * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
     * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
     */
    package model.entidades;

    import java.time.LocalDate;
    import java.time.LocalDateTime;
    import java.time.LocalTime;

    /**
     *
     * @author aylee
     */
    public class Citas {
        private String numeroDocumento;
        private String nombreDueno;
        private String apellidoDueno;
        private String telefono;
        private String nombreMascota;
        private String tipoAnimal;
        private int edadMascota;
        private String motivoConsulta;
        private LocalDate fechaConsulta;
        private LocalTime horaConsulta;
        private String veterinario;

        public Citas(String numeroDocumento, String nombreDueno, String apellidoDueno, String telefono, String nombreMascota, String tipoAnimal, int edadMascota, String motivoConsulta, LocalDate fechaConsulta, LocalTime horaConsulta, String veterinario) {
            this.numeroDocumento = numeroDocumento;
            this.nombreDueno = nombreDueno;
            this.apellidoDueno = apellidoDueno;
            this.telefono = telefono;
            this.nombreMascota = nombreMascota;
            this.tipoAnimal = tipoAnimal;
            this.edadMascota = edadMascota;
            this.motivoConsulta = motivoConsulta;
            this.fechaConsulta = fechaConsulta;
            this.horaConsulta = horaConsulta;
            this.veterinario = veterinario;
        }

        public String getNumeroDocumento() {
            return numeroDocumento;
        }

        public void setNumeroDocumento(String numeroDocumento) {
            this.numeroDocumento = numeroDocumento;
        }

        public String getNombreDueno() {
            return nombreDueno;
        }

        public void setNombreDueno(String nombreDueno) {
            this.nombreDueno = nombreDueno;
        }

        public String getApellidoDueno() {
            return apellidoDueno;
        }

        public void setApellidoDueno(String apellidoDueno) {
            this.apellidoDueno = apellidoDueno;
        }

        public String getTelefono() {
            return telefono;
        }

        public void setTelefono(String telefono) {
            this.telefono = telefono;
        }

        public String getNombreMascota() {
            return nombreMascota;
        }

        public void setNombreMascota(String nombreMascota) {
            this.nombreMascota = nombreMascota;
        }

        public String getTipoAnimal() {
            return tipoAnimal;
        }

        public void setTipoAnimal(String tipoAnimal) {
            this.tipoAnimal = tipoAnimal;
        }

        public int getEdadMascota() {
            return edadMascota;
        }

        public void setEdadMascota(int edadMascota) {
            this.edadMascota = edadMascota;
        }

        public String getMotivoConsulta() {
            return motivoConsulta;
        }

        public void setMotivoConsulta(String motivoConsulta) {
            this.motivoConsulta = motivoConsulta;
        }

        public LocalDate getFechaConsulta() {
            return fechaConsulta;
        }

        public void setFechaConsulta(LocalDate fechaConsulta) {
            this.fechaConsulta = fechaConsulta;
        }

        public LocalTime gethoraConsulta() {
            return horaConsulta;
        }

        public void sethoraConsulta(LocalTime horaConsulta) {
            this.horaConsulta = horaConsulta;
        }

        public String getVeterinario() {
            return veterinario; 
        }

        public void setVeterinario(String veterinario) {
            this.veterinario = veterinario;
        }


    }
